--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^5.8.4",
     "apexcharts": "^3.22.2",
+    "axios": "^1.4.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
@@ -15,6 +18,7 @@
     "react-dark-mode-toggle": "0.0.10",
     "react-dom": "^17.0.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
